Thu Jul 28 12:05:25 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* lib/cache.py: trying to fix #309273, avoid creating ~/.profile_cache
	  if no remote resources are used.

Thu Jul 28 11:14:59 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* lib/userdb.py: tried to fix #311796 problem of profilename to
	  URI conversion.

2005-07-28  Mark McLoughlin  <markmc@redhat.com>

	Fixes bug #311798

	* lib/config.py.in: add ~/.thumbnails to 
	directories-to-ignore

2005-07-27  Mark McLoughlin  <markmc@redhat.com>

	* lib/protosession.py: remove stale X lock files and
	unix sockets. Now that Xnest runs as the sabayon
	user and not root, Xnest won't have permission to
	overwrite someone else's files.

2005-07-25  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sessionwidget.py: fix debug spew error.

2005-07-18  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: add ~/.gstreamer-0.8 to
	directories-to-ignore - registry.xml is basically
	just a cache of plugin info; it'll never be
	interesting to have in a profile since it gets
	created during login.

2005-07-18  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: add ~/.recently-used to
	files-to-ignore - its never going to something
	an admin will want populated by default.

2005-07-14  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sessionwindow.py: treat a delete event
	from the saveconfirm dialog the same as cancel.

2005-07-14  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/changeswindow.py: fix type in Will's patch.

2005-07-14  William Lachance  <wrlach@gmail.com>

	* admin-tool/changeswindow.py: Desensitize "mandatory" 
	column in changes window if ignore is selected. Fixes
	bug #305786.

2005-07-11  William Lachance  <wrlach@gmail.com>

	* admin-tool/usersdialog.py: Sort by name of user.

	* admin-tool/sabayon.glade: Increase default width
	of users dialog to 440 from 400 (eliminates need for
	horizontal scrollbar in most cases)
